fix: :bug: fix background jump
open menu -> scrollbar disappears -> background jumps

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -6,6 +6,7 @@
 	box-sizing: border-box;
 }
 html {
+    overflow-y:scroll;
 	background: #333;
 	color: #fff;
 }
